CI_CD/Jenkinsfiles/image-auto-build/k8s/db-phpmyadmin/db-phpmyadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: PROJECT-NAME-db
  labels:
     app: PROJECT-NAME
spec:
 type: NodePort
 ports:
  - name: http
    port: 80
 selector:
  app: PROJECT-NAME-db
